--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-This is a test for update_blog function
+<html lang="en">
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Document
+  </title>
+ </head>
+ <body>
+  <h1>
+   My Blog Home Page
+  </h1>
+  <a href="index">
+   Home
+  </a>
+  <a href="content\3.html">
+   3
+  </a>
+ </body>
+</html>
